syntax = "proto3";

message com {

    message variflight {

        message dataservice {

            option csharp_namespace = "com.variflight.dataservice";
            option cc_enable_arenas = true;
            option go_package = "com/variflight/dataservice";
            option java_package = "com.variflight.dataservice";
            option java_multiple_files = false;
            option objc_class_prefix = "DS";

            message ProtoDesc {

                string version = 1;
                map<string, bytes> files = 2;
                google.protobuf.StringValue No_cache_prefix = 3;
                google.protobuf.StringValue Full_cache_prefix = 4;
                google.protobuf.StringValue Increment_cache_prefix = 5;
                google.protobuf.Int32Value defaultTT_l = 6;
                google.protobuf.Int32Value default_max_version = 7;
                map<string, int32> rpcTT_ls = 8;
                map<string, int32> rpc_max_versions = 9;
            }
            service Proto {
                rpc getProtoDescription (google.protobuf.Empty) returns (ProtoDesc);
            }

            message test {

                message Request {

                    string value = 1;
                }

                message Response {

                    int64 value = 1;
                }
                service TT {
                    rpc unary (Request) returns (Response);
                    rpc clientStream (stream Request) returns (Response);
                    rpc serverStream (Request) returns (stream Response);
                    rpc bothStream (stream Request) returns (stream Response);
                }

                message student {

                    int32 id = 1;
                    string name = 2;
                    int32 age = 3;
                    map<string, string> tags = 4;
                    google.protobuf.StringValue comment = 5;
                    google.protobuf.Int32Value ivx = 6;
                    map<string, google.protobuf.Int64Value> tags2 = 7;
                    student s = 100;
                    map<int32, student> ms = 1001;
                    repeated student rs = 10009;
                    repeated google.protobuf.Int64Value ri = 10;
                }

                message exam {

                    int32 id = 1;
                    string cls = 2;
                    int32 studentid = 3;
                    int32 score = 4;
                }

                message StudentScore {

                    student s = 1;
                    map<string, exam> exams = 2;
                }

                message StudentScoresMap {

                    map<int32, StudentScore> results = 1;
                }
                service ScoreService {
                    rpc GetAllScores (google.protobuf.Empty) returns (StudentScoresMap);
                }
            }
        }
    }
}

message google {

    message protobuf {

        message DoubleValue {

            double value = 1;
        }

        message FloatValue {

            float value = 1;
        }

        message Int64Value {

            int64 value = 1;
        }

        message UInt64Value {

            uint64 value = 1;
        }

        message Int32Value {

            int32 value = 1;
        }

        message UInt32Value {

            uint32 value = 1;
        }

        message BoolValue {

            bool value = 1;
        }

        message StringValue {

            string value = 1;
        }

        message BytesValue {

            bytes value = 1;
        }

        message Empty {
        }
    }
}